# olpxek-bot

./: .dockerignore  .gitignore  Dockerfile  LICENSE  Makefile  README.md  entrypoint.sh  pyproject.toml  setup.cfg
.github/workflows/: tests.yml
discord_bot/: __init__.py  naver_stock_api.py  stock.py
olpxek_bot/: __init__.py  __main__.py  charts.py  config.py  eval_py.py  finviz.py  kimp.py  naver_stock_api.py  olpxekbot.py  runner.py  stock.py  upbit.py
olpxek_bot/cogs/: __init__.py  finance.py  karlo.py  llm.py  py.py  summarize_youtube.py
olpxek_bot/llms/: gemini.py
olpxek_bot/utils/: llm_provider.py  youtube_summarizer.py
tests/: test_config.py  test_upbit.py
tests/fixtures/: upbit_market_all.json  upbit_price_krw_btc.json
