[tool.poetry]
name = "olpxek-bot"
version = "0.1.0"
description = ""
authors = ["Chanwoong Kim <me@chanwoong.kim>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
"discord.py" = "^1.6.0"
RestrictedPython = "^5.0"
playwright = "^1.18.1"
cachetools = "^4.1.1"
asyncache = "^0.1.1"
bs4 = "^0.0.1"
juga = {git = "https://github.com/kexplo/juga", rev = "525dc15"}
typer = "^0.3.2"
sentry-sdk = "^1.0.0"
omegaconf = "^2.0.6"
matplotlib = "^3.3.4"
pandas = "^1.2.3"
mplfinance = "^0.12.7-alpha.10"

[tool.poetry.dev-dependencies]
ptpython = "^3.0.3"
mypy = "^0.782"
black = "^19.10b0"
flake8-import-order = "^0.18.1"
pep8-naming = "^0.11.1"
flake8-pytest-style = "^1.2.3"
flake8-logging-format = "^0.6.0"
flake8-comprehensions = "^3.2.3"
flake8-builtins = "^1.5.3"
flake8-bugbear = "^20.1.4"
flake8-bandit = "^2.1.2"
pytest = "^6.2.2"
aioresponses = "^0.7.1"
pytest-asyncio = "^0.14.0"

[tool.poetry.scripts]
olpxek_bot = 'olpxek_bot.__main__:app'

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
